--- a/main.css
+++ b/main.css
@@ -35,6 +35,6 @@
    margin-left: 5px;
  }
  
- .active:after {
+ .collapsible.active:after {
    content: "\2796"; /* Unicode character for "minus" sign (-) */
  }
